# programming_2025-2026

./: .gitignore
ComputerVission/: ComputerVision.sln  UpgradeLog.htm
ComputerVission/ComputerVision/: ComputerVision.csproj  FastImage.cs  ImageBlock.cs  MainForm.Designer.cs  MainForm.cs  Point.cs
DSP/: conv.py  convolutie.m  fade_in_out.m  filtering_song.m  filtrare.m  filtru_notchiir.m  foo.txt  foo2.txt  fourier.m  lab14_iir.asv  lab14_iir.m  lab1_note.m  lab_tfdi.m  lab_tfdi_2.m  lucrarea9_conv.m  reconstructing_signal.m  signal_representations.m  spectre.m
DSP/Python/: fft.py
IntelligentSystems/conway/: README  config.json  main.py
IntelligentSystems/genetic/: README.md  genetic_algorithm.py  main.py  network.json  node.py
IntelligentSystems/particle_swarm/: config.json  main.py  requirements.txt
IntelligentSystems/rl/: README.MD  blackjack.py  main.py  requirements.txt
IntelligentSystems/stm_wiki/: .gitignore  README.md  pyproject.toml
IntelligentSystems/stm_wiki/src/stm_wiki/: crew.py  main.py
IntelligentSystems/stm_wiki/src/stm_wiki/config/: agents.yaml  tasks.yaml
ML/backpropagation/: neural_network.py  xor.py
ML/data_generator/: README.md  configs.json  generated_points.ml  generated_points.txt  main.py
ML/k_means/: README  centroids.ml  configs.json  kmeans.py  main.py
ML/qt_demo/: main.py
ML/som/: Makefile  configs.json  main.py  ml_worker.py  neuron.py  point.py
MobileComputing/: settings.gradle.kts
MobileComputing/EventExample/: makefile
MobileComputing/Lab0/: settings.gradle
MobileComputing/app/: build.gradle.kts
(+45 files in other folders)
