[project]
name = "stm_wiki"
version = "0.1.0"
description = "stm_wiki using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "litellm>=1.75.3",
    "pip>=25.3",
]

[project.scripts]
stm_wiki = "stm_wiki.main:run"
run_crew = "stm_wiki.main:run"
train = "stm_wiki.main:train"
replay = "stm_wiki.main:replay"
test = "stm_wiki.main:test"
run_with_trigger = "stm_wiki.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
